--- a/index.html
+++ b/index.html
@@ -67,11 +67,6 @@ var svg2 = d3.select("body").append("svg")
     .attr("height", height)
     .attr("id", "charts");
 
-//svg2.append("Rect")
-  //  .attr("class", "background")
-   // .attr("width", width)
-    //.attr("height", height);
-
 var g  = svg.append("g");
 var g2 = svg.append("g").attr("id", "airports"); 
 var g3 = svg.append("g").attr("id", "alllinks");
@@ -102,7 +97,7 @@ d3.json("/data/us.json", function(error, us) {
                 var maxLinkFreq = d3.max(links, function(d) { return d.freq; });
                 var minLinkFreq = d3.min(links, function(d) { return d.freq; });
 
-                var scaleLink = d3.scale.linear()
+                var scaleLink = d3.scale.pow().exponent(2)
                         .domain([minLinkFreq, maxLinkFreq])
                         .range([1, 5]);
               
@@ -146,39 +141,33 @@ d3.json("/data/us.json", function(error, us) {
                                                         var obj = {};
                                                         obj.freq = d.freq;
                                                         obj.airport = d.to;
-                                                        obj.ftype = "outbound";
+                                                        obj.ftype = "Outbound flights";
                                                         return obj;
                                                      })
-                                                     .sort(compare);
+                                                     .sort(compare).slice(1,20);
                         var dataChartInbound = links.filter(function(d) { return current.Var1 == d.to; })
                                                     .map(function(d) {
                                                       var obj = {};
                                                       obj.freq = d.freq;
                                                       obj.airport = d.from;
-                                                      obj.ftype = "inbound";
+                                                      obj.ftype = "Inbound flights";
                                                       return obj;
                                                     })
-                                                    .sort(compare);
+                                                    .sort(compare).slice(1,20);
 
-                        /*var dataChart = []
-                        for (i = 0; i < dataChartInbound.length; i++) {
-                          var obj = {};
-                          obj.airport = dataChartInbound[i].airport;
-                          obj.inboundFreq = +dataChartInbound[i].infreq;
-                          obj.outboundFreq = +dataChartOutbound[i].outfreq;
-                          dataChart.push(obj);
-                        }*/
                         var dataChart = dataChartInbound.concat(dataChartOutbound);
                         svg2.selectAll('*').remove();
                         console.log(dataChart);
                         var myChart = new dimple.chart(svg2, dataChart);
-                        myChart.setBounds(80, 30, width/1.5, height - 50)
-                        myChart.addMeasureAxis("x", "freq");
-                        myChart.addCategoryAxis("y", ["airport", "ftype"]);
+                        myChart.setBounds(80, 30, width/1.5, height - 70)
+                        var x = myChart.addMeasureAxis("x", "freq");
+                        var y = myChart.addCategoryAxis("y", ["airport", "ftype"]);
                         myChart.addSeries("ftype", dimple.plot.bar);
                         myChart.addLegend(60, 10, 400, 20, "right");
                         myChart.draw();
-                        
+                        y.titleShape.text("Airports Abbreviation");
+                        x.titleShape.text("Frequency")
+
                         selectedAirport = current;
                         g3.selectAll("path").remove();
                         var redraw = new Set();
